fixed overflow issue on mobile view

--- a/src/components/Nav/_nav.scss
+++ b/src/components/Nav/_nav.scss
@@ -316,6 +316,7 @@
     padding: 8px 0px;
     color: $light-gray;
     font-size: 1.5rem;
+    overflow: hidden;
   }
 }
 
